Добавлены: распределение накладных, хранение отчётов, передача метода, доработки по ТЗ
